# pronin-test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  task.md
proninteam_backend/: .env.sample
proninteam_backend/api/: serializers.py  tests.py  urls.py  views.py
proninteam_backend/config/: asgi.py  settings.py  urls.py  wsgi.py
proninteam_backend/service/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py
proninteam_backend/service/management/commands/: populate_mock_data.py
proninteam_backend/service/migrations/: 0001_initial.py  0002_alter_collection_author_alter_collection_cause_and_more.py  0003_alter_collection_options_alter_payment_options_and_more.py  0004_alter_collection_due_date_alter_payment_date.py  0005_alter_collection_cover_image.py
