[project]
name = "pronin-test"
version = "0.1.0"
description = "Test for pronin-team"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]

[tool.ruff.format]
quote-style = "double"
line-length = 120

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
