[project]
name = "pronin-test"
version = "0.1.0"
description = "Test for pronin-team"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "faker>=37.1.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
]

[tool.ruff]
exclude = [
    "migrations",
]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
